manifests-failed/pinniped-2.2.4.tgz-manifest.yaml
---
# Source: pinniped/templates/concierge/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: my-release-pinniped-concierge
  namespace: "pinniped-2.2.4.tgz"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: pinniped
    app.kubernetes.io/version: 0.31.0
    helm.sh/chart: pinniped-2.2.4
    app.kubernetes.io/part-of: pinniped
    app.kubernetes.io/component: concierge
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/name: pinniped
      app.kubernetes.io/part-of: pinniped
      app.kubernetes.io/component: concierge
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 8444
        - port: 10250
---
# Source: pinniped/templates/supervisor/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: my-release-pinniped-supervisor
  namespace: "pinniped-2.2.4.tgz"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: pinniped
    app.kubernetes.io/version: 0.31.0
    helm.sh/chart: pinniped-2.2.4
    app.kubernetes.io/part-of: pinniped
    app.kubernetes.io/component: supervisor
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/name: pinniped
      app.kubernetes.io/part-of: pinniped
      app.kubernetes.io/component: supervisor
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 8443
        - port: 10250
---
# Source: pinniped/templates/concierge/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-pinniped-concierge-pinniped-2.2.4.tgz-api
  namespace: "pinniped-2.2.4.tgz"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: pinniped
    app.kubernetes.io/version: 0.31.0
    helm.sh/chart: pinniped-2.2.4
    app.kubernetes.io/part-of: pinniped
    app.kubernetes.io/component: concierge
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 443
      targetPort: https-api
  selector:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/name: pinniped
    app.kubernetes.io/component: concierge
---
# Source: pinniped/templates/concierge/service-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-pinniped-concierge
  namespace: "pinniped-2.2.4.tgz"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: pinniped
    app.kubernetes.io/version: 0.31.0
    helm.sh/chart: pinniped-2.2.4
    app.kubernetes.io/part-of: pinniped
    app.kubernetes.io/component: concierge
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: https-proxy
      nodePort: null
  selector:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/name: pinniped
    app.kubernetes.io/component: concierge
---
# Source: pinniped/templates/supervisor/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-pinniped-supervisor-api
  namespace: "pinniped-2.2.4.tgz"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: pinniped
    app.kubernetes.io/version: 0.31.0
    helm.sh/chart: pinniped-2.2.4
    app.kubernetes.io/part-of: pinniped
    app.kubernetes.io/component: supervisor
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 10250
      nodePort: null
  selector:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/name: pinniped
    app.kubernetes.io/component: supervisor
---
# Source: pinniped/templates/supervisor/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-pinniped-supervisor
  namespace: "pinniped-2.2.4.tgz"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: pinniped
    app.kubernetes.io/version: 0.31.0
    helm.sh/chart: pinniped-2.2.4
    app.kubernetes.io/part-of: pinniped
    app.kubernetes.io/component: supervisor
spec:
  type: LoadBalancer
  sessionAffinity: None
  externalTrafficPolicy: "Cluster"
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/name: pinniped
    app.kubernetes.io/component: supervisor
---
# Source: pinniped/templates/concierge/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-pinniped-concierge
  namespace: "pinniped-2.2.4.tgz"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: pinniped
    app.kubernetes.io/version: 0.31.0
    helm.sh/chart: pinniped-2.2.4
    app.kubernetes.io/part-of: pinniped
    app.kubernetes.io/component: concierge
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/name: pinniped
      app.kubernetes.io/component: concierge
  template:
    metadata:
      annotations:
      labels:
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: pinniped
        app.kubernetes.io/version: 0.31.0
        helm.sh/chart: pinniped-2.2.4
        app: pinniped-concierge
        app.kubernetes.io/component: concierge
        app.kubernetes.io/part-of: pinniped
    spec:
      serviceAccountName: my-release-pinniped-concierge
      
      automountServiceAccountToken: true
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: my-release
                    app.kubernetes.io/name: pinniped
                    app.kubernetes.io/component: concierge
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      containers:
        - name: concierge
          image: docker.io/bitnami/pinniped:0.31.0-debian-12-r1
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: null
            seccompProfile:
              type: RuntimeDefault
          command:
            - pinniped-concierge
          args:
            - --config=/bitnami/pinniped/conf/pinniped.yaml
            - --downward-api-path=/etc/podinfo
          resources:
            limits:
              cpu: 150m
              ephemeral-storage: 1024Mi
              memory: 192Mi
            requests:
              cpu: 100m
              ephemeral-storage: 50Mi
              memory: 128Mi
          ports:
            - name: https-proxy
              containerPort: 8444
            - name: https-api
              containerPort: 10250
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            tcpSocket:
              port: https-api
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            httpGet:
              path: /healthz
              port: https-api
              scheme: HTTPS
          volumeMounts:
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - name: config-volume
              mountPath: /bitnami/pinniped/conf
              readOnly: true
            - name: podinfo
              mountPath: /etc/podinfo
              readOnly: true
      volumes:
        - name: empty-dir
          emptyDir: {}
        - name: config-volume
          configMap:
            name: my-release-pinniped-concierge
        - name: podinfo
          downwardAPI:
            items:
              - path: labels
                fieldRef:
                  fieldPath: metadata.labels
              - path: name
                fieldRef:
                  fieldPath: metadata.name
              - path: namespace
                fieldRef:
                  fieldPath: metadata.namespace
---
# Source: pinniped/templates/supervisor/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-pinniped-supervisor
  namespace: "pinniped-2.2.4.tgz"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: pinniped
    app.kubernetes.io/version: 0.31.0
    helm.sh/chart: pinniped-2.2.4
    app.kubernetes.io/part-of: pinniped
    app.kubernetes.io/component: supervisor
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/name: pinniped
      app.kubernetes.io/component: supervisor
  template:
    metadata:
      annotations:
      labels:
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: pinniped
        app.kubernetes.io/version: 0.31.0
        helm.sh/chart: pinniped-2.2.4
        app.kubernetes.io/component: supervisor
        app.kubernetes.io/part-of: pinniped
    spec:
      serviceAccountName: my-release-pinniped-supervisor
      
      automountServiceAccountToken: true
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: my-release
                    app.kubernetes.io/name: pinniped
                    app.kubernetes.io/component: supervisor
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      containers:
        - name: supervisor
          image: docker.io/bitnami/pinniped:0.31.0-debian-12-r1
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: null
            seccompProfile:
              type: RuntimeDefault
          command:
            - pinniped-supervisor
          args:
            - /etc/podinfo
            - /bitnami/pinniped/conf/pinniped.yaml
          resources:
            limits:
              cpu: 150m
              ephemeral-storage: 1024Mi
              memory: 192Mi
            requests:
              cpu: 100m
              ephemeral-storage: 50Mi
              memory: 128Mi
          ports:
            - name: https
              containerPort: 8443
            - name: https-api
              containerPort: 10250
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            tcpSocket:
              port: https
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            httpGet:
              path: /healthz
              port: https
              scheme: HTTPS
          volumeMounts:
            - name: empty-dir
              mountPath: /tmp
            - name: config-volume
              mountPath: /bitnami/pinniped/conf
              readOnly: true
            - name: podinfo
              mountPath: /etc/podinfo
              readOnly: true
      volumes:
        - name: empty-dir
          emptyDir: {}
        - name: config-volume
          configMap:
            name: my-release-pinniped-supervisor
        - name: podinfo
          downwardAPI:
            items:
              - path: labels
                fieldRef:
                  fieldPath: metadata.labels
              - path: name
                fieldRef:
                  fieldPath: metadata.name
              - path: namespace
                fieldRef:
                  fieldPath: metadata.namespace
